# rsbkb

./: .gitignore  Cargo.toml  Changelog.md  README.md  SKILL.md  b64app.rs  hexapp.rs  main.rs  urlapp.rs
.github/workflows/: rust.yml
src/: applet.rs  b64app.rs  baseapp.rs  bgrepapp.rs  crcapp.rs  entropyapp.rs  escapeapp.rs  findsoapp.rs  flateapp.rs  hexapp.rs  htmlapp.rs  main.rs  patternapp.rs  sliceapp.rs  timeapp.rs  urlapp.rs  xorapp.rs
tests/: cli.rs
