[package]
name = "rsbkb"
version = "1.2.1"
authors = ["Raphaël Rigo <devel@syscall.eu>"]
edition = "2018"

[profile.release]
overflow-checks = true
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations

[profile.release-small]
inherits = "release"
overflow-checks = true
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[dependencies]
hex = "0.4"
base64 = "0.21"
percent-encoding = "2.2.0"
clap = "4.3"
crc = "3"
atty = "0.2"
time = {version = "0.3", features=["local-offset", "formatting"]}
regex = {version = "1.5", default-features=false, features=["std", "perf"]}
memmap2 = "0.5"
goblin = {version = "0.5.4", features=["elf32", "elf64", "endian_fd"]}
anyhow = "1.0.71"
miniz_oxide = "0.7.1"

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"

[[bin]]
name = "rsbkb"
path = "src/main.rs"
