[package]
name = "rsbkb"
version = "1.8.0"
authors = ["Raphaël Rigo <devel@syscall.eu>"]
edition = "2018"
rust-version = "1.70"
description = "rsbkb has multiple tools which are designed to be called directly (through symlinks). This allows various operations on data to be chained easily like CyberChef but through pipes."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/trou/rsbkb"
keywords = ["encode", "decode", "hack"]
categories = ["command-line-utilities"]

[profile.release]
overflow-checks = true
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations

[profile.release-small]
inherits = "release"
overflow-checks = true
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[dependencies]
hex = "0.4"
base64 = "0.22"
percent-encoding = "2.2.0"
clap = {version = "~4.4", features = ["derive"]}
crc = "3"
time = {version = "0.3", features=["local-offset", "formatting"]}
regex = {version = "1.10", default-features=false, features=["std", "perf"]}
memmap2 = "0.9"
goblin = {version = "0.8", features=["elf32", "elf64", "endian_fd"]}
anyhow = "1.0.86"
miniz_oxide = "0.8.0"
glob = "0.3.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
htmlentity = "1.3.2"

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"
assert_cmd = {version = "=2.0.13", features = ["color-auto"]}
predicates = "3.0.4"

[[bin]]
name = "rsbkb"
path = "src/main.rs"
